--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Minimalist Frame - A</title>
   <meta property="fc:frame" content="vNext" />
   <meta property="fc:frame:image" content="https://f4.bcbits.com/img/a0600385591_16.jpg" /> <!-- Placeholder for dynamic image URL -->
@@ -10,9 +13,10 @@
   <meta property="fc:frame:button:3" content="View source code" />
   <meta property="fc:frame:button:3:action" content="link" />
   <meta property="fc:frame:button:3:target" content="https://github.com/InsideTheSim/minimalist-frame" />
-  <meta property="fc:frame:post_url" content="https://minimalist-frame.vercel.app/api/frame-a" />
+  <meta property="fc:frame:button:4" content="Get Today's Image" />
 </head>
 <body>
   <h1>Minimalist Frame - A</h1>
+  <img id="randomImage" src="" alt="Random Image">
 </body>
 </html>
